# CAFA-6-Protein-Function-Prediction

./: .gitignore  QUICKSTART.md
01_screenshots/: README.md
02_notebook/: Untitled-1.py  cafa6_baseline.ipynb  cafa6_final_pipeline.ipynb
02_notebook/old_backup/: cafa6_baseline.ipynb
03_app/: README.md  app.py
04_report/: REPORT_DRAFT.md  submission.csv
05_model/: README.md  pyproject.toml  requirements.txt
05_model/configs/: base.yaml
05_model/src/data/: download.py  prepare.py
05_model/src/eval/: metrics.py
